--- a/Register.html
+++ b/Register.html
@@ -14,7 +14,7 @@ body{
 }
 
 .background{
-    background: url(a22.jpg) no-repeat;
+    background: url(2108020.jpg) no-repeat;
     background-size: cover;
     height: 100vh;
     display: flex;
@@ -92,7 +92,7 @@ input{
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Login</title>
+    <title>Register</title>
     <link rel="stylesheet" href="login-style.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700&display=swap" rel="stylesheet">
 </head>
@@ -103,9 +103,10 @@ input{
            </div>
             <div class="box">
                 <form class="form">
-                    <input type="text" class="username" placeholder="Username" required>
-                    <input type="password" class="password" placeholder="Password" required>
-                    <input type="submit" class="button" value="Login">
+                    <input type="text" class="Enter your username" placeholder="Username" required>
+                    <input type="password" class="Enter Your Password" placeholder="Password" required>
+                    <input type="Email" class="Enter Your Email" placeholder="Email" required>
+                    <input type="submit" class="button" value="Register">
                 </form>
             </div>
         </div>
