--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     
               <ul>
                 <li class="active"><a href="#">Home</a></li>
-                  <li><a href="#">Games</a></li>
-                  <li><a href="#">Blog</a></li>
-                  <li><a href="#">Forums</a></li>
+                  <li><a href="SocialMedia.html">SocialMedia</a></li>
+                  <li><a href="AboutUs.html">AboutUs</a></li>
+                  <li><a href="Register.html">Register</a></li>
                   <li><a href="zzzz.html">Contact</a></li>
                   <li><a href="bbbb.html">Login</a></li>
               </ul>
